--- a/email-templates/opposition-euipo.ejs
+++ b/email-templates/opposition-euipo.ejs
@@ -393,7 +393,7 @@
                         
                         <tr style="border-collapse:collapse;"> 
                             <td align="center" style="padding:0;Margin:0;" mc:edit="block_12"><p >
-                                <a href="https://www.trademarkers.com/<%= mailData.actions.services.number %>" class="m_5050328441611229692es-button m_5050328441611229692es-button-3" style="text-decoration:none;font-family:roboto,'helvetica neue',helvetica,arial,sans-serif;font-size:18px;color:#ffffff;border-style:solid;border-color:#1475a9;border-width:10px 20px 10px 20px;display:block;background:#1475a9;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px" target="_blank" >To Our Trademark Registration Services</a>
+                                <a href="https://tm.trademarkers.com/<%= mailData.actions.services.number %>" class="m_5050328441611229692es-button m_5050328441611229692es-button-3" style="text-decoration:none;font-family:roboto,'helvetica neue',helvetica,arial,sans-serif;font-size:18px;color:#ffffff;border-style:solid;border-color:#1475a9;border-width:10px 20px 10px 20px;display:block;background:#1475a9;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px" target="_blank" >To Our Trademark Registration Services</a>
                                 </p></td> 
                         </tr> 
 
