--- a/views/trademark-order/register.ejs
+++ b/views/trademark-order/register.ejs
@@ -4,7 +4,7 @@
 		
 			<h2><%= title %></h2>
             
-            <form id="frm-action-register" method="post" action="http://trademarkers.staging.test/">
+            <form id="frm-action-register" method="post" action="https://trademarkers.com/">
                 <div class="form-group">
                     <label class="form-box-container" for="country">
                         <b> Select Country </b>
