--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -239,7 +239,7 @@
 	<div class="container">
 		<div class="row">
 			
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6" style="margin:auto">
 			
 				<div class="contact-div">
 					<h2>We can do it all</h2> 
@@ -271,7 +271,7 @@
 			</div>
 
 
-			<div class="col-12 col-md-6 ">
+			<!-- <div class="col-12 col-md-6 ">
 
 				<h2>Talk to an expert</h2>
 				
@@ -310,7 +310,7 @@
 				<a href="javascript:$zopim.livechat.window.show();" class="btn btn-black" style="padding: 10px 20px;border-radius: 30px 30px 0px 30px;">
 				Chat <span class="fa fa-comments" style="font-size: 21px; padding: 0px 10px; color: rgb(255, 255, 255);"></span></a>
 				
-			</div>
+			</div> -->
 
 		</div>
 	</div>
