--- a/views/public/contact.ejs
+++ b/views/public/contact.ejs
@@ -9,7 +9,7 @@
 
 		</div>
 
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
             <table class="table tbl-contact-info">
                 <tr>
                     <th rowspan="2">Trademarkers LLC</th>
@@ -49,8 +49,8 @@
 
             </table>
 
-        </div>
-        <div class="col-md-6">
+        </div> -->
+        <div class="col-md-12">
 			
 			<% if (flash.success) { %>
 			<div class="alert alert-success" role="alert">
