--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -38,95 +38,16 @@
           <div class="col-auto">
             <h1 class="pg-logo"><a href="/" title="Trade Markers"><img src="/interactive/images/logo.png" title="Trade Markers" width="248" height="43" alt="Trademarkers logo" /></a></h1>
           </div>
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 text-right">
-            <div class="tm-agent-details">
-                <p class="tm-appl-name">Adverse Trademark Application: <span class="appl-name" id="ApplicationName"><%= action.name %></span></p>
-                <p class="tm-appl-info"><span id="FiledNo">Filed 04/02/2020</span> <span id="TmNo">EUIPO No. <%= action.event.case.numberToShow %></span> Open for Oppositions until <span id="PubDate"><%= action.event.case.publisheddate %></span></p>
+          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
+            <div class="logd-info text-right">
+              Logged in as: - 
             </div>
           </div>
         </div>
       </div>
     </header>
 
-    <section class="tm-sl-head-section tm-sl-section qa-panel-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-              <div class="tm-sl-head">
-                <h1 class="h1">Our <strong>Recommendations</strong></h1>
-                <p class="h6">So with you owning the domain name <strong>${domain}</strong> but neither having trademark protection or an actual business for which you use the brand <strong>${domain}</strong>, you are at risk of:</p>
-              </div>
-              <div class="tm-sl-body or-wrap">
-                <div class="or-seperator mobile-hidden"><span class="or-label">or</span></div>
-                <div class="row eql-col-h justify-content-between">
-                  <div class="col-xl-5 col-md-6">
-                    <div class="or-area or-area-a">
-                      <h2 class="h6 or-area-p">Not being legally able to put your domain to work as a website may infringe on existing trademarks,</h2>
-                    </div>
-                  </div>
-                  <div class="col-12 desktop-hidden">
-                    <div class="or-seperator"><span class="or-label">or</span></div>
-                  </div>
-                  <div class="col-xl-5 col-md-6">
-                    <div class="or-area or-area-b">
-                      <h2 class="h6 or-area-p">Even worse, an owner of a registered trademark can actually use the Uniform Dispute Resolution Policy (or UDRP) to demand arbitration in which you can potentially lose your domain name ${domain} without any compensation (why am I subject to these arbitration proceedings)</h2>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="tm-sl-section ttl-tltp-wrap bg-offwhite">
-      <div class="ttl-tltp ttl-tltp-red"><h2 class="h6 rd-tltp-title">We strongly recommend: </h2></div>
-      <div class="container">
-        <div class="tm-plans">
-          <div class="row eql-col-h">
-              <div class="col-sm-4">
-                <div class="tm-plan">
-                  <div class="tm-plan-head">
-                    <h2 class="h5 tm-plan-title">Trademark Registration</h2>
-                    <p>in a major jurisdiction:</p>
-                  </div>
-                  <div class="tm-plan-body">
-                    <p>United States, Canada, United Kingdom</p>
-                  </div>
-                  <div class="tm-plan-footer">
-                      <a href="#" title="Order Now" class="btn btn-outline-dark">Order Now</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="tm-plan">
-                  <div class="tm-plan-head">
-                    <h2 class="h5 tm-plan-title">Trademark Registration</h2>
-                    <p>in a smaller market (less expensive)</p>
-                  </div>
-                  <div class="tm-plan-body">
-                    <p>Hong Kong, Switzerland</p>
-                  </div>
-                  <div class="tm-plan-footer">
-                      <a href="#" title="Order Now" class="btn btn-outline-dark">Order Now</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="tm-plan">
-                  <div class="tm-plan-head">
-                    <h2 class="h5 tm-plan-title">Trademark Registration</h2>
-                    <p>Provides you the information where a trademark registration is likely to succeed and where not.</p>
-                  </div>
-                  <div class="tm-plan-footer">
-                      <a href="#" title="Order Now" class="btn btn-outline-dark">Order Now</a>
-                  </div>
-                </div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <%- body %>
 
     <footer class="pg-footer">
       <div class="footer-copyright text-center">
