--- a/views/trademark-order/delivery.ejs
+++ b/views/trademark-order/delivery.ejs
@@ -35,7 +35,7 @@
 
                         <h4>Deliver Via Fedex or Regular mail?</h4>
                         
-                        <form action="/service-order-form" method="post">
+                        <form action="http://trademarkers.staging.test/service-order-form" method="post">
                             <input type="hidden" name="word_mark" value="<%= trademark.name %>">
                             <input type="hidden" name="service" value="Fedex Delivery">
                             <input type="hidden" name="case_number" value="<%= trademark.case_number %>">
