--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -59,5 +59,62 @@
   </main>
   <script src="/interactive/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
   <script src="/interactive/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+
+  <script>
+$( document ).ready(function() {
+  $(".frm-sou").submit(function(){
+    
+    let action = $(this).attr('data-action');
+    let response = $(this).attr('data-respond');
+
+    // alert(action);
+    // alert(response);
+
+    $.ajax({
+      url: "/action/response/"+action+"/"+response,
+      type:"GET",
+      dataType:"json",
+      data: {
+        action: action,
+        response: response
+      },
+      contentType: "application/json",
+      success: function( result ) {
+
+      }
+    }); 
+
+      return false;
+  });
+
+  $(".btn-form-update").click(function(){
+    
+    let action = $(this).attr('data-action');
+    let response = $(this).attr('data-respond');
+
+    // alert(action);
+    // alert(response);
+
+    $.ajax({
+      url: "/action/response/"+action+"/"+response,
+      type:"GET",
+      dataType:"json",
+      data: {
+        action: action,
+        response: response
+      },
+      contentType: "application/json",
+      success: function( result ) {
+        // alert('Thanks for !');
+
+        $(location).attr('href', '/')
+      }
+    }); 
+
+      return false;
+  });
+
+});
+  </script>
 </body>
 </html>
