--- a/views/order/status.ejs
+++ b/views/order/status.ejs
@@ -6,7 +6,7 @@
 			<% if (order) { %>
 				
 				<p style="font-weight:600; margin:0">Order #: <%= order.order_number %></p>
-				<p style="font-weight:600">Date Ordered: <%= moment(order.created_at).format('MMM D, YYYY') %></p>
+				<p style="font-weight:600">Date Ordered: <%= (order.created_at).format('MMM D, YYYY') %></p>
 				
 				<% order.trademarks.forEach(function(trademark,key) { %>
 				<div class="card card-status">
