--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -84,7 +84,7 @@ $( document ).ready(function() {
       }
     }); 
 
-      return false;
+      // return false;
   });
 
   $(".btn-form-update").click(function(){
