--- a/email-templates/uspto-sou.ejs
+++ b/email-templates/uspto-sou.ejs
@@ -351,7 +351,7 @@
                          <br><br>
                          What are the requirements for the filing a Statement of Use (SOU) for your trademark application?
                          <br><br>
-                         <a href="https://trademarkers.com/<%= mailData.number %>/statement-of-use" style="text-decoration:none;font-family:roboto,'helvetica neue',helvetica,arial,sans-serif;font-size:18px;color:#ffffff;border-style:solid;border-color:#1475a9;border-width:10px 20px 10px 20px;display:block;background:#1475a9;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px" target="_blank" >
+                         <a href="https://www.trademarkers.com/<%= mailData.number %>/statement-of-use" style="text-decoration:none;font-family:roboto,'helvetica neue',helvetica,arial,sans-serif;font-size:18px;color:#ffffff;border-style:solid;border-color:#1475a9;border-width:10px 20px 10px 20px;display:block;background:#1475a9;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px" target="_blank" >
                           FILE STATEMENT OF USE
                           </a>
                          </p></td> 
