--- a/email-templates/uspto-sou.ejs
+++ b/email-templates/uspto-sou.ejs
@@ -6,7 +6,7 @@
   <meta name="x-apple-disable-message-reformatting"> 
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
   <meta content="telephone=no" name="format-detection"> 
-  <title>Letter of Protest for Domain Owners</title> 
+  <title>Trademarkers</title> 
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel="stylesheet"> 
    
