--- a/views/trademark-order/sou.ejs
+++ b/views/trademark-order/sou.ejs
@@ -15,8 +15,8 @@
                   <div class="ntc-box">
                       <div class="nt-bx-head"><h2 class="h6 mb-0"><strong>Important Legal Notice</strong></h2></div>
                       <div class="nt-bx-body">
-                        <p class="tm-appl-name">Adverse Trademark Application: <span class="appl-name" id="ApplicationName"><%= action.name %></span></p>
-                        <p class="tm-appl-info"><span id="FiledNo" style="font-weight:600">Filed <%= moment(action.dateIssue).format('MMM D, YYYY') %></span> <br> A “Statement of Use” must be filed for your U.S. Trademark Application! </p>
+                        
+                        <p class="tm-appl-info">A “Statement of Use” must be filed for your U.S. Trademark Application! </p>
                       </div>
                       <div class="nt-bx-footer">
                         <p class="dline text-center mb-0">Deadline: <span class="text-red dline-time"><%= moment(action.deadlineDate).format('MMM D, YYYY') %></span></p>
