--- a/views/trademark-order/sou.ejs
+++ b/views/trademark-order/sou.ejs
@@ -25,16 +25,22 @@
                 </div>
               </div>
             </div>
+
             <div class="tm-sl-body or-wrap">
               <div class="row">
                 <div class="col-xl-9 col-lg-12">
                   <div class="or-area or-area-a">
-                    <h2 class="h6 or-area-p">Not being legally able to put your domain to work as a website may infringe on existing trademarks,</h2>
+                    <h2 class="h6 or-area-p">Declare that you are actually using it</h2>
                   </div>
                   <div class="or-seperator"><span class="or-label">or</span></div>
                   <div class="or-area or-area-b">
-                    <h2 class="h6 or-area-p">Even worse, an owner of a registered trademark can actually use the Uniform Dispute Resolution Policy (or UDRP) to demand arbitration in which you can potentially lose your domain name <%= action.domain %> without any compensation (why am I subject to these arbitration proceedings)</h2>
+                    <h2 class="h6 or-area-p">Ask for an extension of that time frame (and pay a fee)</h2>
                   </div>
+                </div>
+
+                <div class="col-xl-9 col-lg-8">
+                  <p>If you are based in the United States, you can do that yourself, but if not,
+                    you have to retain an attorney to file one of the above. </p>
                 </div>
               </div>
             </div>
@@ -42,6 +48,7 @@
       </div>
     </div>
   </section>
+
 
   <section class="tm-sl-section bg-white">
     <div class="container">
