--- a/views/trademark-order/payment.ejs
+++ b/views/trademark-order/payment.ejs
@@ -77,7 +77,23 @@
         <!-- end SOU -->
         <% } %>
 
-      <% } %>
+      <% } else { %>
+        <div class="col-12">
+          <form action="/checkout/form" method="POST" class="text-center">
+            <input type="hidden" name="action" value="">
+            <input type="text" name="price" placeholder="Enter Amount in USD">
+
+            <script
+                src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                data-key="pk_test_8IWnZ5BFL6cRN27ZARs8qB9Q00PET9ihlr"
+                data-name="TRADEMARKERS LLC"
+                data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                data-locale="auto">
+            </script>
+          </form>
+        </div>
+
+      <% }%>
 
 
     </div>
