--- a/views/trademark-order/sou.ejs
+++ b/views/trademark-order/sou.ejs
@@ -83,7 +83,7 @@
                 </div>
                 <div class="tm-plan-footer">
                     
-                    <form class="frm-sou" data-action="<%= action._id %>" data-respond="1" action="https://trademarkers.com/service-order-form" method="post">
+                    <form class="frm-sou" data-action="<%= action._id %>" data-respond="1" action="" method="post">
                       <input type="hidden" name="word_mark" value="<%= action.trademark.name %>">
                       <input type="hidden" name="service" value="Statement of Use">
                       <input type="hidden" name="case_number" value="<%= action.trademark.case_number %>">
@@ -118,7 +118,7 @@
                     Government fees: $125.00</p>
                 </div>
                 <div class="tm-plan-footer">
-                  <form class="frm-sou" data-action="<%= action._id %>" data-respond="2" action="https://trademarkers.com/service-order-form" method="post">
+                  <form class="frm-sou" data-action="<%= action._id %>" data-respond="2" action="" method="post">
                     <input type="hidden" name="word_mark" value="<%= action.trademark.name %>">
                     <input type="hidden" name="service" value="Extension for trademark allowance">
                     <input type="hidden" name="case_number" value="<%= action.trademark.case_number %>">
